--- a/src/App.css
+++ b/src/App.css
@@ -1,56 +1,5 @@
-.menu-container {
-  height: 40rem;
-  width: 25rem;
-  background-color: #f48b29;
-  margin: 0 auto 0 auto;
-  border-radius: 1rem;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-rows: 10% 90%;
-      grid-template-rows: 10% 90%;
-      grid-template-areas: "top" "bottom";
-  overflow: hidden;
+.App {
+  background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
 }
 
-.top-img {
-  width: 300px;
-  margin: 2rem;
-}
 
-.bars {
-  height: 40rem;
-  width: 5rem;
-  background-color: #53c1de;
-  position: relative;
-  z-index: 0;
-  -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-  top: -40rem;
-  left: 10rem;
-}
-
-.top {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  grid-area: top;
-  text-align: center;
-  color: white;
-  font-weight: bold;
-  font-size: 2rem;
-  margin-top: 1rem;
-  z-index: 1;
-}
-
-.bottom {
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  grid-area: bottom;
-  padding: 1rem;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
-  grid-gap: 1rem;
-  z-index: 1;
-}
-/*# sourceMappingURL=App.css.map */
